welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:6: error: not found: value go
    a= 1 + golomb(1+go-golomb(golomb(a)))
                    ^