welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var a: Int =1
  var i: Int =1
  while (i!=num) {
    i= i+1
    a= 1 + golomb(1+go-golomb(golomb(a)))
  }
    
  return a
}